# tushare-mcp

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  brainstorming-session-results.md  brief.md  prd.md
docs/architecture/: checklist-results.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/qa/assessments/: 1.1-project-bootstrap-ci-nfr-20250929.md  1.1-project-bootstrap-ci-trace-20250929.md  1.1-risk-20250929.md  1.1-test-design-20250929.md
docs/qa/gates/: 1.1-project-bootstrap-ci.yml
docs/stories/: 1.1.project-bootstrap-ci.md
service/app/: main.py  security.py
service/tests/unit/: test_health.py  test_security.py  test_structure.py
shared/config/: settings.py
