[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tushare-mcp"
version = "0.1.0"
description = "Tushare MCP service skeleton"
authors = [{ name = "Project Team" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "anyio==4.4.0",
    "httpx==0.27.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.1",
    "sqlmodel==0.0.16",
    "structlog==24.1.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.setuptools]
packages = ["service", "shared", "metadata", "mcp_commands"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "ruff==0.5.6",
    "black==24.8.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["service", "shared", "metadata", "mcp_commands"]
profile = "black"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q"
testpaths = ["service/tests"]
asyncio_mode = "auto"
